# github_repos_release_collector

./: .gitignore  Cargo.toml  README.md  set_version.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/db/: mod.rs
src/github/: mod.rs
src/query/: mod.rs
src/sync/: mod.rs
