[package]
name = "github-release-collector"
version = "1.0.0"
edition = "2021"
description = "GitHub Release text mirror system"
authors = ["Developer"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Hash
sha2 = "0.10"
hex = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Config
directories = "5.0"
toml = "0.8"

# Async concurrency control
futures = "0.3"

[features]
default = []